--- a/MAVENARTICRAFTPROJECTNAME/pom.xml
+++ b/MAVENARTICRAFTPROJECTNAME/pom.xml
@@ -21,10 +21,17 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-server</artifactId>
     <version>3.141.59</version>
+</dependency>
+
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.8.3</version>
 </dependency>
   </dependencies>
 </project>
